--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vercel dev",
     "deploy": "vercel --prod",
-    "build:css": "npx tailwindcss -i ./assets/css/input.css -o ./assets/css/tailwind.css --minify",
+    "build:css": "tailwindcss -i ./assets/css/input.css -o ./assets/css/tailwind.css --minify",
     "build": "npm run build:css && node update-version.js"
   },
   "keywords": [
@@ -17,9 +17,7 @@
   "author": "Sarshij Karn",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.6.0"
-  },
-  "devDependencies": {
+    "axios": "^1.6.0",
     "tailwindcss": "^3.4.1"
   }
 }
