--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,7 @@
   "outputDirectory": ".",
   "rewrites": [
     { "source": "/testfolio", "destination": "https://sarshijkarn.github.io/testfolio/" },
+    { "source": "/testfolio/", "destination": "https://sarshijkarn.github.io/testfolio/" },
     { "source": "/testfolio/:path*", "destination": "https://sarshijkarn.github.io/testfolio/:path*" },
     { "source": "/api/(.*)", "destination": "/api/$1" }
   ],
