testfolio update removed

--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,6 @@
 {
   "outputDirectory": ".",
-  "rewrites": [
-    { "source": "/testfolio", "destination": "https://sarshijkarn.github.io/testfolio/" },
-    { "source": "/testfolio/(.*)", "destination": "https://sarshijkarn.github.io/testfolio/$1" },
-    { "source": "/api/(.*)", "destination": "/api/$1" }
-  ],
+  "rewrites": [{ "source": "/api/(.*)", "destination": "/api/$1" }],
   "headers": [
     {
       "source": "/(.*)",
